# cs344

my-cs344/cs344/: CMakeLists.txt
my-cs344/cs344/HW1/: Thumbs.db
my-cs344/cs344/HW3/: CMakeLists.txt  reference_calc.cpp  student_func.cu
my-cs344/cs344/HW4/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
my-cs344/cs344/HW5/: CMakeLists.txt  main.cu  student.cu
my-cs344/cs344/Unit3 Code Snippets/: float_ops.h  histo.cu  notes.txt  reduce.cu  reduce_min.cu  scan.cu
my-cs344/cs344/Unit4 Code Snippets/: Makefile  compact.cu  float_ops.h  scan.cu
my-cs344/cs344/Unit4 Code Snippets/compact/: Makefile
my-cs344/cs344/reuse/: utils.h
my-cs344/cs344/summary/: reference_calc.cc  reference_calc.h
my-cs344/slns-win/sln-vs08-sp1/: Activity1.nvact  sln-vs08-sp1.sln
my-cs344/slns-win/sln-vs08-sp1/HW1/: HW1.vcproj
my-cs344/slns-win/sln-vs08-sp1/cuda_env_test/: cuda_env_test.vcproj
my-cs344/slns-win/sln-vs08-sp1/cuda_udacity/: cuda_udacity.vcproj
my-cs344/slns-win/sln-vs08-sp1/opencv_test_app/: opencv_test_app.vcproj
my-cs344/slns-win/vs-08ee-no-ide/: bat.bat  cube.cu  square.cu  square.exp
my-cs344/src/: launcher.cc
my-cs344/src/cc/: hw1_test.cc  hw2_test.cc  opencv_test_app.cc  splitters.cc  splitters.h  splitters_test.cc  xD_test.cc
my-cs344/src/cuda/: hw1_kernels.cu  hw2_kernels.cu  hw2_kernels_cu.h  reuse.cu  xd.cu
